chore: upgrade collectors to shorthand function