@@ -5,9 +5,7 @@ import com.google.common.collect.Lists;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FileLoader {
 
@@ -16,7 +14,7 @@ public class FileLoader {
             final List<String> numbersAsStrings = Files.readAllLines(Paths.get("src/main/resources/" + fileName));
             return numbersAsStrings.stream()
                     .map(Integer::parseInt)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             System.out.println("File not found! " + e.getMessage());
         }
